Fix connect properties not being sent.
This was happening when the client automatically reconnected.

Closes #1846. Thanks to DSOFreak.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -77,6 +77,8 @@ Client library:
 - Fix missing mach/mach_time.h header on OS X. Closes #1831.
 - Add MOSQ_OPT_BIND_ADDRESS to allow setting of a bind address independently
   of the `mosquitto_connect*()` call.
+- Fix connect properties not being sent when the client automatically
+  reconnects. Closes #1846.
 
 Clients:
 - Add timeout return code (27) for `mosquitto_sub -W <secs>` and
