--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -54,6 +54,7 @@ Broker:
 - Added support for controlling UNSUBSCRIBE calls in v5 plugin ACL checks.
 - Document that X509_free() must be called after using
   mosquitto_client_certificate(). Closes #1842.
+- Add "deny" acl type. Closes #1611.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
