--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -57,6 +57,7 @@ Broker:
 - Add "deny" acl type. Closes #1611.
 - The broker now sends the receive-maximum property for MQTT v5 CONNACKs.
 - mosquitto_password now forbids the : character. Closes #1833.
+- Fix `log_timestamp_format` not applying to `log_dest topic`. Closes #1862.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
