Change `tls_version` option behaviour.
The `tls_version` option now defines the *minimum* TLS protocol version to
be used, rather than the exact version.

Closes #1258. Thanks to Daniele Sluijters.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -24,6 +24,8 @@ Breaking changes:
   connections are allowed.
 - The `pid_file` option will now always attempt to write a pid file,
   regardless of whether the `-d` argument is used when running the broker.
+- The `tls_version` option now defines the *minimum* TLS protocol version to
+  be used, rather than the exact version. Closes #1258.
 
 Broker:
 - When running as root, if dropping privileges to the "mosquitto" user fails,
