--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -62,6 +62,7 @@ Broker:
 - Fix `log_timestamp_format` not applying to `log_dest topic`. Closes #1862.
 - Add the `bridge_max_packet_size` option. Closes #265.
 - Add the `bridge_bind_address` option. Closes #1311.
+- Fix crash on Windows if loading a plugin fails. Closes #1866.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
