Fix file logging on Windows.
Closes #1880. Thanks to J1EXA, richl, and EnneiteZer.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -81,6 +81,7 @@ Broker:
 - Fix listener not being reassociated with client when reloading a persistence
   file and `per_listener_settings true` is set and the client did not set a
   username. Closes #1891.
+- Fix file logging on Windows. Closes #1880.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
