--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,7 @@ Broker:
   Closes #1979.
 - Fix apparmor incorrectly denying access to
   /var/lib/mosquitto/mosquitto.db.new. Closes #1978.
+- Fix potential intermittent initial bridge connections when using poll().
 
 
 2.0.4 - 2020-12-22
