Fix incorrect description in mosquitto_ctrl man page.
Closes #1995. Thanks to fyta2000.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,7 @@ Broker:
 
 Apps:
 - Disallow control characters in mosquitto_passwd usernames.
+- Fix incorrect description in mosquitto_ctrl man page. Closes #1995.
 
 
 2.0.4 - 2020-12-22
