--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -13,6 +13,10 @@ Broker:
   before a role that was attached to the group or client is deleted.
   Closes #1998.
 
+Client library:
+- Improve documentation around the `_v5()` and non-v5 functions, e.g.
+  `mosquitto_publish()` and `mosquitto_publish_v5().
+
 Build:
 - `install` Makefile target should depend on `all`, not `mosquitto`, to ensure
   that man pages are always built. Closes #1989.
