--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -16,6 +16,7 @@ Broker:
   before a role that was attached to the group or client is deleted.
   Closes #1998.
 - Improve logging in dynsec addGroupRole command. Closes #2005.
+- Improve logging in dynsec addGroupClient command. Closes #2008.
 
 Client library:
 - Improve documentation around the `_v5()` and non-v5 functions, e.g.
