--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+Broker:
+- Fix potential duplicate Will messages being sent when a will delay interval
+  has been set.
+
+
 2.0.5 - 2021-01-11
 ==================
 
