--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,8 @@ Broker:
 - Fix message expiry interval property not being honoured in
   `mosquitto_broker_publish` and `mosquitto_broker_publish_copy`.
 - Fix websockets listeners with TLS not responding. Closes #2020.
+- Add notes that libsystemd-dev or similar is needed if building with systemd
+  support. Closes #2019.
 
 
 2.0.5 - 2021-01-11
