--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,7 @@ Broker:
 - Fix websockets listeners with TLS not responding. Closes #2020.
 - Add notes that libsystemd-dev or similar is needed if building with systemd
   support. Closes #2019.
+- Improve logging in obscure cases when a client disconnects. Closes #2017.
 
 Apps:
 - Allow command line arguments to override config file options in
