--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,8 @@ Broker:
 - Add notes that libsystemd-dev or similar is needed if building with systemd
   support. Closes #2019.
 - Improve logging in obscure cases when a client disconnects. Closes #2017.
+- Fix reloading of listeners where multiple listeners have been defined with
+  the same port but different bind addresses. Closes #2029.
 
 Apps:
 - Allow command line arguments to override config file options in
