--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -9,6 +9,7 @@ Broker:
 - Improve logging in obscure cases when a client disconnects. Closes #2017.
 - Fix reloading of listeners where multiple listeners have been defined with
   the same port but different bind addresses. Closes #2029.
+- Fix `message_size_limit` not applying to the Will payload. Closes #2022.
 
 Apps:
 - Allow command line arguments to override config file options in
