--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -10,6 +10,10 @@ Broker:
 - Fix reloading of listeners where multiple listeners have been defined with
   the same port but different bind addresses. Closes #2029.
 - Fix `message_size_limit` not applying to the Will payload. Closes #2022.
+- The error topic-alias-invalid was being sent if an MQTT v5 client published
+  a message with empty topic and topic alias set, but the topic alias hadn't
+  already been configured on the broker. This has been fixed to send a
+  protocol error, as per section 3.3.4 of the specification.
 
 Apps:
 - Allow command line arguments to override config file options in
