Note in the man pages that SIGHUP reloads TLS certificates.
Closes #2037. Thanks to Greg Troxel.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -14,6 +14,7 @@ Broker:
   a message with empty topic and topic alias set, but the topic alias hadn't
   already been configured on the broker. This has been fixed to send a
   protocol error, as per section 3.3.4 of the specification.
+- Note in the man pages that SIGHUP reloads TLS certificates. Closes #2037.
 
 Apps:
 - Allow command line arguments to override config file options in
