--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,6 @@
 Broker:
 - Fix exporting of executable symbols on BSD when building via makefile.
+- Fix some minor memory leaks on exit only.
 
 Clients:
 - Fix config files truncating options after the first space. Closes #2059.
