--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,7 @@
 Broker:
 - Fix exporting of executable symbols on BSD when building via makefile.
 - Fix some minor memory leaks on exit only.
+- Fix possible memory leak on connect. Closes #2057.
 
 Clients:
 - Fix config files truncating options after the first space. Closes #2059.
