--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,9 +8,14 @@ Broker:
 - Give compile time warning if libwebsockets compiled without external poll
   support. Closes #2060.
 
+Client library:
+- Fix mosquitto_{pub|sub}_topic_check() functions not returning MOSQ_ERR_INVAL
+  on topic == NULL.
+
 Clients:
 - Fix possible loss of data in `mosquitto_pub -l` when sending multiple long
   lines. Closes #2078.
+
 
 2.0.7 - 2021-02-04
 ==================
