--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -16,6 +16,11 @@ Clients:
 - Fix possible loss of data in `mosquitto_pub -l` when sending multiple long
   lines. Closes #2078.
 
+Build:
+- Provide a mechanism for Docker users to run a broker that doesn't use
+  authentication, without having to provide their own configuration file.
+  Closes #2040.
+
 
 2.0.7 - 2021-02-04
 ==================
