Fix messages to `$` prefixed topics being rejected.
Closes #2111. Thanks to yellowgg2.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,7 @@
 Broker:
 - Fix `tls_version` behaviour not matching documentation. It was setting the
   exact TLS version to use, not the minimium TLS version to use. Closes #2110.
+- Fix messages to `$` prefixed topics being rejected. Closes #2111.
 
 
 2.0.8 - 2021-02-25
