Fix QoS 0 messages not being delivered when max_queued_bytes was configured.
Closes #2123. Thanks to quackgizmo.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,8 @@ Broker:
 - Fix `tls_version` behaviour not matching documentation. It was setting the
   exact TLS version to use, not the minimium TLS version to use. Closes #2110.
 - Fix messages to `$` prefixed topics being rejected. Closes #2111.
+- Fix QoS 0 messages not being delivered when max_queued_bytes was configured.
+  Closes #2123.
 
 
 2.0.8 - 2021-02-25
