Fix TLS bridge/lib incorrectly connecting on invalid CA file.
Closes #2130. Thanks to becz.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,12 +1,28 @@
-2.0.9 - 2021-03-xx
+2.0.9 - 2021-03-11
 ==================
 
+Security:
+- If an empty or invalid CA file was provided to the client library for
+  verifying the remote broker, then the initial connection would fail but
+  subsequent connections would succeed without verifying the remote broker
+  certificate. Closes #2130.
+- If an empty or invalid CA file was provided to the broker for verifying the
+  remote broker for an outgoing bridge connection then the initial connection
+  would fail but subsequent connections would succeed without verifying the
+  remote broker certificate. Closes #2130.
+
 Broker:
+- Fix encrypted bridge connections incorrectly connecting when `bridge_cafile`
+  is empty or invalid. Closes #2130.
 - Fix `tls_version` behaviour not matching documentation. It was setting the
   exact TLS version to use, not the minimium TLS version to use. Closes #2110.
 - Fix messages to `$` prefixed topics being rejected. Closes #2111.
 - Fix QoS 0 messages not being delivered when max_queued_bytes was configured.
   Closes #2123.
+
+Client library:
+- Fix encrypted connections incorrectly connecting when the CA file passed to
+  `mosquitto_tls_set()` is empty or invalid. Closes #2130.
 
 Build:
 - Fix cmake epoll detection.
