--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,11 @@
+2.0.10 - 2021-xx-xx
+==================
+
+Clients:
+- Set `receive-maximum` to not exceed the `-C` message count in mosquitto_sub
+  and mosquitto_rr, to avoid potentially lost messages. Closes #2134.
+
+
 2.0.9 - 2021-03-11
 ==================
 
