--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -9,6 +9,10 @@ Clients:
 - Set `receive-maximum` to not exceed the `-C` message count in mosquitto_sub
   and mosquitto_rr, to avoid potentially lost messages. Closes #2134.
 
+Build:
+- A variety of minor build related fixes, like functions not having previous
+  declarations.
+
 
 2.0.9 - 2021-03-11
 ==================
