--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -13,6 +13,7 @@ Clients:
 Build:
 - A variety of minor build related fixes, like functions not having previous
   declarations.
+- Fix CMake cross compile builds not finding opensslconf.h. Closes #2160.
 
 
 2.0.9 - 2021-03-11
