--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,9 +1,17 @@
-2.0.10 - 2021-xx-xx
+2.0.10 - 2021-04-03
 ==================
+
+Security:
+- CVE-xxxx-xxxx: If an authenticated client connected with MQTT v5 sent a
+  malformed CONNACK message to the broker a NULL pointer dereference occurred,
+  most likely resulting in a segfault. This will be updated with the CVE
+  number when it is assigned.
+  Affects versions 2.0.0 to 2.0.9 inclusive.
 
 Broker:
 - Don't over write new receive-maximum if a v5 client connects and takes over
   an old session. Closes #2134.
+- Fix CVE-xxxx-xxxx. Closes #2163.
 
 Clients:
 - Set `receive-maximum` to not exceed the `-C` message count in mosquitto_sub
